TheMightyDude (05 October 2013)
--------------------------------------
Fixed issue in rsmove.php due to change in revision 3018, we validate this more correctly now.
Fixed bug in preset.php where it accept the last sector, we also validate this more correctly now as well, however room for improvement.
Got fed up with BntTranslate::load(...) replacing/overriding language variables when called in other functions or files.

TheMightyDude (23 September 2013)
--------------------------------------
Fixed bug in BntDb::initDb(...) where it had the database name argument missing.
Fixed issue in BntDb::initDb(...) when using ADOdb's postgres driver when postgres isn't installed.
Fixed bug in new2.php when looking up if new account info already exists.
Fixed PHP Notice: Undefined index: l_options in teams.php on line 771
Fixed PHP Notice: Undefined index: l_score in teams.php on line 791
Fixed PHP Notice: Undefined variable: langvars in teams.php on line 657
Fixed PHP Notice: Undefined variable: langvars in teams.php on line 671
Fixed PHP Notice: Undefined variable: langvars in teams.php on line 672
Fixed PHP Notice: Undefined variable: langvars in teams.php on line 673
Fixed PHP Notice: Undefined variable: langvars in teams.php on line 674
Fixed PHP Strict Standards: Non-static method BntDefense::defence_vs_defence() should not be called statically in teams.php on line 187

TheKabal (22 September 2013)
--------------------------------------
Move TestXml to BntTestXml
Move Template to BntTemplate
Move TemplateSystem to BntXmlTemplateSystem
Move PluginSystem to BntPluginSystem
Move CalcLevels to BntCalcLevels
Move PlayerLog to BntPlayerLog
Move CheckBan to BntCheckBan
Move Timer to BntTimer (classes should be prefixed with Bnt where possible)
Move SectorDefense to BntSectorDefense (classes should be prefixed with Bnt where possible)
Move AdminLog to BntAdminLog (classes should be prefixed with Bnt where possible)